Add LocationRecord API
