# swagger/v1/swagger.json
@@ -66,6 +66,66 @@
         }
       }
     },
+    "/api/v1/location_records/{id}": {
+      "get": {
+        "summary": "person record",
+        "tags": [
+          "LocationRecord"
+        ],
+        "produces": [
+          "application/vnd.api+json"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "type": "string",
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "successful",
+            "schema": {
+              "$ref": "#/definitions/location_record_response"
+            }
+          }
+        }
+      }
+    },
+    "/api/v1/location_records": {
+      "get": {
+        "summary": "person records",
+        "tags": [
+          "LocationRecord"
+        ],
+        "produces": [
+          "application/vnd.api+json"
+        ],
+        "parameters": [
+          {
+            "name": "page[size]",
+            "in": "query",
+            "type": "integer",
+            "required": false
+          },
+          {
+            "name": "page[number]",
+            "in": "query",
+            "type": "integer",
+            "required": false
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "successful",
+            "schema": {
+              "$ref": "#/definitions/location_records_response"
+            }
+          }
+        }
+      }
+    },
     "/api/v1/person_records/{id}": {
       "get": {
         "summary": "person record",
@@ -442,6 +502,200 @@
             },
             "attributes": {
               "$ref": "#/definitions/absence_record_attributes"
+            }
+          }
+        }
+      }
+    },
+    "location_record_attributes": {
+      "type": "object",
+      "properties": {
+        "Location ID": {
+          "type": "string",
+          "example": "1234567",
+          "x-nullable": true
+        },
+        "Location Code": {
+          "type": "string",
+          "example": "070 z Maternity LWH",
+          "x-nullable": true
+        },
+        "Location Description": {
+          "type": "string",
+          "example": "Maternity Town Hospital",
+          "x-nullable": true
+        },
+        "Inactive Date": {
+          "type": "date",
+          "example": null,
+          "x-nullable": true
+        },
+        "Assignment Address 1st line": {
+          "type": "string",
+          "example": "Maternity",
+          "x-nullable": true
+        },
+        "Assignment Address 2nd line": {
+          "type": "string",
+          "example": "Town Wells Hospital",
+          "x-nullable": true
+        },
+        "Assignment Address 3rd line": {
+          "type": "string",
+          "example": null,
+          "x-nullable": true
+        },
+        "Town": {
+          "type": "string",
+          "example": null,
+          "x-nullable": true
+        },
+        "County": {
+          "type": "string",
+          "example": null,
+          "x-nullable": true
+        },
+        "Postcode": {
+          "type": "string",
+          "example": null,
+          "x-nullable": true
+        },
+        "Country": {
+          "type": "string",
+          "example": "GB",
+          "x-nullable": true
+        },
+        "Telephone": {
+          "type": "string",
+          "example": null,
+          "x-nullable": true
+        },
+        "Fax": {
+          "type": "string",
+          "example": null,
+          "x-nullable": true
+        },
+        "Payslip Delivery Point": {
+          "type": "string",
+          "example": "Y",
+          "x-nullable": true
+        },
+        "Site Code": {
+          "type": "string",
+          "example": null,
+          "x-nullable": true
+        },
+        "Welsh Location Translation": {
+          "type": "string",
+          "example": null,
+          "x-nullable": true
+        },
+        "Welsh Address Line 1": {
+          "type": "string",
+          "example": null,
+          "x-nullable": true
+        },
+        "Welsh Address Line 2": {
+          "type": "string",
+          "example": null,
+          "x-nullable": true
+        },
+        "Welsh Address Line 3": {
+          "type": "string",
+          "example": null,
+          "x-nullable": true
+        },
+        "Welsh Town Translation": {
+          "type": "string",
+          "example": null,
+          "x-nullable": true
+        },
+        "Last Update Date": {
+          "type": "date-time",
+          "example": "2011-08-03T16:13:10.000Z",
+          "x-nullable": true
+        }
+      }
+    },
+    "location_records_response": {
+      "type": "object",
+      "properties": {
+        "data": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "properties": {
+              "id": {
+                "type": "string",
+                "example": "0"
+              },
+              "type": {
+                "type": "string",
+                "example": "location_records"
+              },
+              "link": {
+                "type": "object",
+                "properties": {
+                  "self": {
+                    "type": "string",
+                    "example": "https://esr.sardjv.co.uk/api/v1/location_records/0"
+                  }
+                }
+              },
+              "attributes": {
+                "$ref": "#/definitions/location_record_attributes"
+              }
+            }
+          }
+        },
+        "links": {
+          "type": "object",
+          "properties": {
+            "first": {
+              "type": "string",
+              "example": "https://esr.sardjv.co.uk/api/v1/location_records?page[number]=1&page[size]=5"
+            },
+            "prev": {
+              "type": "string",
+              "example": "https://esr.sardjv.co.uk/api/v1/location_records?page[number]=1&page[size]=5"
+            },
+            "next": {
+              "type": "string",
+              "example": "https://esr.sardjv.co.uk/api/v1/location_records?page[number]=2&page[size]=5"
+            },
+            "last": {
+              "type": "string",
+              "example": "https://esr.sardjv.co.uk/api/v1/location_records?page[number]=5&page[size]=5"
+            }
+          }
+        }
+      }
+    },
+    "location_record_response": {
+      "type": "object",
+      "properties": {
+        "data": {
+          "type": "object",
+          "properties": {
+            "id": {
+              "type": "string",
+              "example": "0"
+            },
+            "type": {
+              "type": "string",
+              "example": "location_records"
+            },
+            "link": {
+              "type": "object",
+              "properties": {
+                "self": {
+                  "type": "string",
+                  "example": "https://esr_api.sardjv.co.uk/api/v1/location_records/0"
+                }
+              }
+            },
+            "attributes": {
+              "$ref": "#/definitions/location_record_attributes"
             }
           }
         }
